--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -21,18 +21,7 @@
       Descubra como usar técnicas comprovadas de PNL e persuasão para influenciar pessoas, conquistar respeito e transformar sua vida.
     </p>
 
-    <!-- CARD DE PREÇO -->
-    <div class="bg-white/10 border border-gray-500 rounded-xl p-6 max-w-md mx-auto text-black">
-      <h3 class="text-xl font-bold text-white mb-2">CÓDIGO DA PERSUASÃO</h3>
-      <p class="text-gray-300">De <s>R$ 97,00</s> por apenas:</p>
-      <p class="text-3xl font-bold text-green-400 mt-2">R$ 27,90 à vista</p>
-      <p class="text-gray-300 text-sm mb-4">ou 6x de R$ 5,23</p>
-      <a href="https://chk.eduzz.com/E0D6P4V691" 
-         class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 w-full block rounded-lg transition-all">
-         QUERO DESBLOQUEAR O CÓDIGO
-      </a>
-    </div>
-  </div>
+   </div>
 </section>
 
 <!-- SEÇÃO 2: PARA QUEM É -->
@@ -68,6 +57,36 @@
     </div>
   </div>
 </section>
+
+
+<!-- CARD DE PREÇO -->
+<div class="bg-white/10 border border-gray-500 rounded-xl p-6 max-w-md mx-auto text-black mt-12">
+  <h3 class="text-xl font-bold text-white mb-2">CÓDIGO DA PERSUASÃO</h3>
+  <p class="text-gray-300">De <s>R$ 97,00</s> por apenas:</p>
+  <p class="text-3xl font-bold text-green-400 mt-2">R$ 27,90 à vista</p>
+  <p class="text-gray-300 text-sm mb-4">ou 6x de R$ 5,23</p>
+  <a href="https://chk.eduzz.com/E0D6P4V691" 
+     class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 w-full block rounded-lg transition-all">
+     QUERO DESBLOQUEAR O CÓDIGO
+  </a>
+</div>
+
+<!-- CARD DE GARANTIA -->
+<section class="px-6 py-16 text-center">
+  <div class="bg-white text-black rounded-xl shadow-lg max-w-lg mx-auto p-8">
+    <h3 class="text-2xl font-bold mb-4">Garantia Incondicional de 30 Dias</h3>
+    <p style="font-size:14px; color:#333; line-height:1.5; max-width:420px; margin:0 auto;">
+      A compra deste material é totalmente <br>
+      sem risco para você.<br><br>
+      Se ele não atender às suas expectativas nos <br>
+      primeiros 30 dias após a compra, nós reembolsaremos <br>
+      todo o valor que você pagou, sem fazer perguntas.<br><br>
+      Basta enviar um e-mail para o <br>
+      suporte em <b>contato@start-app.com</b>
+    </p>
+  </div>
+</section>
+
 
 <!-- SEÇÃO 4: OFERTA FINAL -->
 <section class="px-6 py-20 bg-gradient-to-b from-black to-gray-900 text-center">
