--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -11,17 +11,34 @@
 <body class="bg-black text-white font-sans">
 
 <!-- HERO -->
-<section class="relative min-h-screen flex items-center justify-center text-center px-4">
-  <div>
-    <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-6">
-      <span class="text-white">O Código da Persuasão:</span><br>
-      <span class="bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">Domine os Gatilhos Mentais</span>
-    </h1>
-    <p class="text-lg max-w-2xl mx-auto text-gray-300 mb-8">
-      Descubra como usar técnicas comprovadas de PNL e persuasão para influenciar pessoas, conquistar respeito e transformar sua vida.
-    </p>
+<section class="relative min-h-screen px-6 py-12 lg:py-20 bg-black">
+  <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
+    
+    <!-- BLOCO DE TEXTO -->
+    <div class="text-center lg:text-left">
+      <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-6">
+        <span class="text-white">O Código da Persuasão:</span><br>
+        <span class="bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+          Domine os Gatilhos Mentais
+        </span>
+      </h1>
+      <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
+        Descubra como usar técnicas comprovadas de PNL e persuasão para influenciar pessoas, 
+        conquistar respeito e transformar sua vida.
+      </p>
+      <a href="#preco" 
+         class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-full text-lg transition-all">
+         QUERO DESBLOQUEAR O CÓDIGO
+      </a>
+    </div>
 
-   </div>
+    <!-- BLOCO DA IMAGEM -->
+    <div class="flex justify-center lg:justify-end">
+      <img src="https://i.imgur.com/rE9pIj5.png" 
+           alt="O Código da Persuasão"
+           class="w-[90%] max-w-sm lg:max-w-md object-contain" />
+    </div>
+  </div>
 </section>
 
 <!-- SEÇÃO 2: PARA QUEM É -->
