--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -13,9 +13,16 @@
 <!-- HERO -->
 <section class="relative min-h-screen px-6 py-12 lg:py-20 bg-black">
   <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
-    
+
+    <!-- BLOCO DA IMAGEM (MOBILE EM CIMA / DESKTOP À DIREITA) -->
+    <div class="flex justify-center lg:order-2">
+      <img src="https://i.imgur.com/rE9pIj5.png" 
+           alt="O Código da Persuasão"
+           class="w-[90%] max-w-sm lg:max-w-md object-contain" />
+    </div>
+
     <!-- BLOCO DE TEXTO -->
-    <div class="text-center lg:text-left">
+    <div class="text-center lg:text-left lg:order-1">
       <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-6">
         <span class="text-white">O Código da Persuasão:</span><br>
         <span class="bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
@@ -32,12 +39,6 @@
       </a>
     </div>
 
-    <!-- BLOCO DA IMAGEM -->
-    <div class="flex justify-center lg:justify-end">
-      <img src="https://i.imgur.com/rE9pIj5.png" 
-           alt="O Código da Persuasão"
-           class="w-[90%] max-w-sm lg:max-w-md object-contain" />
-    </div>
   </div>
 </section>
 
