--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -100,7 +100,7 @@
       primeiros 30 dias após a compra, nós reembolsaremos <br>
       todo o valor que você pagou, sem fazer perguntas.<br><br>
       Basta enviar um e-mail para o <br>
-      suporte em <b>contato@start-app.com</b>
+      suporte em <b>contato@scodigo-persosuasao.com.br</b>
     </p>
   </div>
 </section>
@@ -118,7 +118,7 @@
 
 <!-- FOOTER -->
 <footer class="bg-black text-gray-500 text-xs text-center py-8 px-4">
-  <p><strong>Dr. Douglas Leão</strong> - Todos os direitos reservados.<br>
+  <p><strong>O Código da Persuasão</strong> - Todos os direitos reservados.<br>
   ESTE SITE NÃO É do FACEBOOK. Este site não faz parte do site do Facebook ou do Facebook Inc.<br>
   FACEBOOK é uma marca comercial independente da FACEBOOK, Inc.</p>
 </footer>
