--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -92,6 +92,12 @@
 <!-- CARD DE GARANTIA -->
 <section class="px-6 py-16 text-center">
   <div class="bg-white text-black rounded-xl shadow-lg max-w-lg mx-auto p-8">
+    
+    <!-- Imagem da Garantia -->
+    <img src="https://media.inlead.cloud/uploads/7652/2025-03-12/sm-x1kj9-sm-5qzj0-image-220-2-3.webp" 
+         alt="Garantia 30 Dias" 
+         class="mx-auto mb-6 w-32 lg:w-40">
+
     <h3 class="text-2xl font-bold mb-4">Garantia Incondicional de 30 Dias</h3>
     <p style="font-size:14px; color:#333; line-height:1.5; max-width:420px; margin:0 auto;">
       A compra deste material é totalmente <br>
@@ -100,7 +106,7 @@
       primeiros 30 dias após a compra, nós reembolsaremos <br>
       todo o valor que você pagou, sem fazer perguntas.<br><br>
       Basta enviar um e-mail para o <br>
-      suporte em <b>contato@scodigo-persosuasao.com.br</b>
+      suporte em <b>contato@start-app.com</b>
     </p>
   </div>
 </section>
