--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -104,7 +104,7 @@
       </p>
       <a href="#preco" 
          class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-full text-lg transition-all">
-         QUERO DESBLOQUEAR O CÓDIGO
+         DESBLOQUEAR CÓDIGO
       </a>
     </div>
 
