--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -104,7 +104,7 @@
       </p>
       <a href="#preco" 
          class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-full text-lg transition-all">
-         DESBLOQUEAR CÓDIGO
+        🔒 DESBLOQUEAR CÓDIGO
       </a>
     </div>
 
@@ -114,7 +114,7 @@
 <!-- SEÇÃO 2: PARA QUEM É -->
 <section class="px-6 py-20 bg-black text-center">
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    Para quem é este eBook?
+    Descubra se você tem maturidade para este material?
   </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto">
     <div class="border border-gray-600 rounded-xl p-6 bg-white/5">Para quem sente dificuldade em influenciar pessoas.</div>
@@ -123,6 +123,11 @@
     <div class="border border-gray-600 rounded-xl p-6 bg-white/5">Para quem busca respeito, autoridade e autoconfiança.</div>
   </div>
 </section>
+
+
+
+
+
 
 <!-- SEÇÃO 3: O QUE VOCÊ VAI APRENDER -->
 <section class="px-6 py-20 bg-black text-center">
