--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -105,10 +105,10 @@
         Descubra como usar técnicas comprovadas de PNL e persuasão para influenciar pessoas, 
         conquistar respeito e transformar sua vida.
       </p>
-      <a href="#preco" 
-         class="bg-green-500 text-white font-bold py-4 px-8 rounded-full text-lg transition-all btn-pulsante">
-        🔒 DESBLOQUEAR CÓDIGO
-      </a>
+  <a href="#preco" 
+   class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
+   🔒 DESBLOQUEAR CÓDIGO
+</a>
     </div>
 
   </div>
