--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -239,8 +239,8 @@
   <h2 class="text-3xl lg:text-5xl font-bold mb-6">Oferta Especial de Lançamento</h2>
   <p class="text-gray-300 mb-8">De <s>R$ 97,00</s> por apenas R$ 27,90 à vista ou 6x de R$ 5,23.<br> Aproveite antes que o preço suba!</p>
   <a href="https://sun.eduzz.com/E0D6P4V691" 
-     class="bg-green-500 text-white font-bold py-5 px-8 rounded-full text-lg transition-all btn-pulsante">
-     SIM, QUERO ACESSAR AGORA
+     class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
+     ✅ SIM, QUERO ACESSAR AGORA
   </a>
 </section>
 
