--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -356,5 +356,15 @@
   FACEBOOK é uma marca comercial independente da FACEBOOK, Inc.</p>
 </footer>
 
+
+
+
+<script>
+  window.onbeforeunload = function () {
+    window.scrollTo(0, 0);
+  };
+</script>
+
+
 </body>
 </html>
