--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -115,15 +115,21 @@
 </section>
 
 
-
 <!-- SEÇÃO 2: PARA QUEM É -->
-<section class="px-6 py-20 bg-black text-center">
-  <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+<section class="relative px-6 py-20 bg-black text-center">
+  
+  <!-- Imagem decorativa -->
+  <div class="absolute inset-x-0 top-12 flex justify-center pointer-events-none">
+    <img src="https://i.imgur.com/7rCmcDK.png" 
+         alt="Decoração" 
+         class="w-40 opacity-70 -mt-8">
+  </div>
+
+  <h2 class="relative text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent z-10">
     Descubra se você tem maturidade p/ este material
   </h2>
 
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto">
-
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto relative z-10">
     <!-- CARD 1 -->
     <div class="card relative border border-gray-600 rounded-xl p-6 bg-white/5 overflow-hidden opacity-0 translate-y-10 transition-all duration-700">
       <img src="https://img.freepik.com/premium-photo/audience-concert-black-white_832479-14491.jpg"
@@ -163,24 +169,6 @@
   </div>
 </section>
 
-<script>
-  // Animação dos cards ao rolar a página
-  const cards = document.querySelectorAll('.card');
-
-  function revelarCards() {
-    const triggerBottom = window.innerHeight * 0.85;
-    cards.forEach(card => {
-      const cardTop = card.getBoundingClientRect().top;
-      if (cardTop < triggerBottom) {
-        card.classList.add("opacity-100", "translate-y-0");
-        card.classList.remove("opacity-0", "translate-y-10");
-      }
-    });
-  }
-
-  window.addEventListener("scroll", revelarCards);
-  window.addEventListener("load", revelarCards);
-</script>
 
 
 
