--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -117,14 +117,16 @@
 
 
 
+
+
 <!-- SEÇÃO 2: PARA QUEM É -->
 <section class="relative px-6 py-20 bg-black text-center">
   
-  <!-- Imagem decorativa -->
-  <div class="absolute inset-x-0 top-12 flex justify-center pointer-events-none">
+  <!-- Imagem decorativa grande -->
+  <div class="absolute inset-x-0 top-6 flex justify-center pointer-events-none z-0">
     <img src="https://i.imgur.com/7rCmcDK.png" 
          alt="Decoração" 
-         class="w-40 opacity-70 -mt-8">
+         class="w-72 lg:w-96 opacity-20 -mt-6">
   </div>
 
   <h2 class="relative text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent z-10">
@@ -167,9 +169,11 @@
         Para quem busca respeito, autoridade e autoconfiança.
       </div>
     </div>
-
   </div>
 </section>
+
+
+
 
 
 
