--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -376,9 +376,9 @@
 
 
 <script>
-  window.onbeforeunload = function () {
-    window.scrollTo(0, 0);
-  };
+  if ('scrollRestoration' in history) {
+    history.scrollRestoration = 'manual';
+  }
 </script>
 
 
