--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -117,16 +117,14 @@
 
 
 
-
-
 <!-- SEÇÃO 2: PARA QUEM É -->
-<section class="relative px-6 py-20 bg-black text-center">
+<section class="relative px-6 py-20 bg-black text-center overflow-hidden">
   
-  <!-- Imagem decorativa grande -->
-  <div class="absolute inset-x-0 top-6 flex justify-center pointer-events-none z-0">
+  <!-- Imagem decorativa atrás do título -->
+  <div class="absolute inset-x-0 top-0 flex justify-center z-0">
     <img src="https://i.imgur.com/7rCmcDK.png" 
          alt="Decoração" 
-         class="w-72 lg:w-96 opacity-20 -mt-6">
+         class="w-full max-w-5xl -mt-6">
   </div>
 
   <h2 class="relative text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent z-10">
@@ -171,7 +169,6 @@
     </div>
   </div>
 </section>
-
 
 
 
