--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -124,7 +124,7 @@
   <div class="absolute inset-x-0 top-0 flex justify-center z-0">
     <img src="https://i.imgur.com/7rCmcDK.png" 
          alt="Decoração" 
-         class="w-full max-w-5xl -mt-6">
+         class="w-full max-w-5xl -mt-20"> <!-- mais para cima -->
   </div>
 
   <h2 class="relative text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent z-10">
