--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -120,22 +120,23 @@
 <!-- SEÇÃO 2: PARA QUEM É -->
 <section class="relative px-6 py-20 bg-black text-center overflow-hidden">
   
-  <!-- Imagem decorativa atrás do título -->
-  <div class="absolute inset-x-0 top-0 flex justify-center z-0">
+  <!-- Imagem por cima do título -->
+  <div class="absolute inset-x-0 top-0 flex justify-center z-20">
     <img src="https://i.imgur.com/7rCmcDK.png" 
          alt="Decoração" 
-         class="w-full max-w-5xl -mt-20"> <!-- mais para cima -->
+         class="w-full max-w-4xl -mt-10 opacity-100">
   </div>
 
+  <!-- Título agora atrás -->
   <h2 class="relative text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent z-10">
     Descubra se você tem maturidade p/ este material
   </h2>
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto relative z-10">
-    <!-- CARD 1 -->
-    <div class="card relative border border-gray-600 rounded-xl p-6 bg-white/5 overflow-hidden opacity-0 translate-y-10 transition-all duration-700">
+    <!-- Cards -->
+    <div class="card relative border border-gray-600 rounded-xl p-6 bg-white/5 overflow-hidden">
       <img src="https://img.freepik.com/premium-photo/audience-concert-black-white_832479-14491.jpg"
-           class="absolute inset-0 w-full h-full object-cover opacity-30 transition-transform duration-500 hover:scale-110" />
+           class="absolute inset-0 w-full h-full object-cover opacity-30" />
       <div class="relative z-10 text-white font-semibold">
         Para quem sente dificuldade em influenciar pessoas.
       </div>
