--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -115,19 +115,17 @@
 </section>
 
 
-
-
 <!-- SEÇÃO 2: PARA QUEM É -->
 <section class="px-6 py-20 bg-black text-center">
   
-  <!-- Imagem acima do título -->
-  <div class="flex justify-center mb-4">
+  <!-- Imagem colada no título -->
+  <div class="flex justify-center">
     <img src="https://i.imgur.com/7rCmcDK.png" 
          alt="Decoração"
          class="w-full max-w-3xl opacity-100">
   </div>
 
-  <!-- Título abaixo da imagem -->
+  <!-- Título imediatamente abaixo da imagem -->
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
     Descubra se você tem maturidade p/ este material
   </h2>
