--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -115,17 +115,19 @@
 </section>
 
 
+
+
 <!-- SEÇÃO 2: PARA QUEM É -->
 <section class="px-6 py-20 bg-black text-center">
   
-  <!-- Imagem colada no título -->
+  <!-- Imagem translucida bem próxima do título -->
   <div class="flex justify-center">
     <img src="https://i.imgur.com/7rCmcDK.png" 
          alt="Decoração"
-         class="w-full max-w-3xl opacity-100">
+         class="w-full max-w-3xl opacity-80 -mb-2">
   </div>
 
-  <!-- Título imediatamente abaixo da imagem -->
+  <!-- Título -->
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
     Descubra se você tem maturidade p/ este material
   </h2>
