--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -83,7 +83,7 @@
 </script>
 
 <!-- HERO -->
-<section class="relative min-h-screen px-6 pt-12 pb-2 lg:pt-16 lg:pb-2 bg-black">
+<section class="relative px-6 pt-12 pb-4 lg:pt-16 lg:pb-4 bg-black">
   <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
 
     <!-- Imagem -->
