--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -194,26 +194,36 @@
 
 
 
+
 <!-- SEÇÃO 3 -->
 <section class="relative px-6 py-32 bg-black text-center overflow-hidden">
-  <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
+  <h2 class="text-3xl lg:text-4xl font-bold mb-24 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
     O que você vai aprender dentro do Código da Persuasão?
   </h2>
 
   <!-- Linha de sangue -->
-  <div id="blood-line" class="absolute top-32 left-1/2 -translate-x-1/2 w-[6px] rounded-full z-10"></div>
+  <div id="blood-line" class="absolute left-1/2 -translate-x-1/2 top-[120px] w-[4px] rounded-full z-10"></div>
 
-  <!-- Textos -->
-  <div class="relative flex flex-col items-center gap-24 z-20">
-    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-xl fade-text drop-shadow-[0_0_10px_black]">
-      📖 Descubra os 15 gatilhos mentais, como funcionam e como aplicá-los no dia a dia.
-    </p>
-    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-xl fade-text drop-shadow-[0_0_10px_black]">
-      🧠 Domine as técnicas de PNL para programar sua mente e influenciar os outros.
-    </p>
-    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-xl fade-text drop-shadow-[0_0_10px_black]">
-      🎯 Veja aplicações práticas em vendas, negociações e relacionamentos reais.
-    </p>
+  <!-- Textos sem card -->
+  <div class="relative flex flex-col items-center gap-20 z-20">
+    <div class="opacity-0 transition-opacity duration-1000 fade-text max-w-xl">
+      <h3 class="font-bold mb-2 text-white text-2xl drop-shadow-[0_0_10px_black]">📖 15 Gatilhos Mentais</h3>
+      <p class="text-gray-300 text-lg drop-shadow-[0_0_10px_black]">
+        Descubra cada gatilho, como funciona e como aplicá-lo no dia a dia.
+      </p>
+    </div>
+    <div class="opacity-0 transition-opacity duration-1000 fade-text max-w-xl">
+      <h3 class="font-bold mb-2 text-white text-2xl drop-shadow-[0_0_10px_black]">🧠 Técnicas de PNL</h3>
+      <p class="text-gray-300 text-lg drop-shadow-[0_0_10px_black]">
+        Como programar sua mente e a dos outros para aceitar novas ideias.
+      </p>
+    </div>
+    <div class="opacity-0 transition-opacity duration-1000 fade-text max-w-xl">
+      <h3 class="font-bold mb-2 text-white text-2xl drop-shadow-[0_0_10px_black]">🎯 Aplicações Práticas</h3>
+      <p class="text-gray-300 text-lg drop-shadow-[0_0_10px_black]">
+        Exemplos reais de como usar persuasão em vendas, negociações e relacionamentos.
+      </p>
+    </div>
   </div>
 </section>
 
@@ -223,22 +233,23 @@
     height: 0;
     background: linear-gradient(to bottom, #b71c1c 0%, #ff0000 40%, #700000 100%);
     box-shadow: 0 0 25px rgba(255,0,0,0.6);
-    position: absolute;
     border-radius: 999px;
+    position: absolute;
   }
 
-  /* Efeito gota mais grossa no fim */
+  /* Gota na ponta */
   #blood-line::after {
     content: '';
     position: absolute;
-    bottom: -15px;
+    bottom: -18px;
     left: 50%;
     transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
     background: radial-gradient(circle, #ff0000 0%, #8b0000 80%);
     border-radius: 50%;
     box-shadow: 0 0 20px rgba(255,0,0,0.6);
+    opacity: 0;
   }
 </style>
 
@@ -246,20 +257,34 @@
   const bloodLine = document.getElementById("blood-line");
   const texts = document.querySelectorAll(".fade-text");
 
+  let maxHeight = 0; // altura máxima já atingida (para não subir ao rolar pra cima)
+
   window.addEventListener("scroll", () => {
     const section = bloodLine.parentElement;
     const rect = section.getBoundingClientRect();
     const windowHeight = window.innerHeight;
 
     if (rect.top < windowHeight && rect.bottom > 0) {
-      // progresso do scroll dentro da seção
       let progress = Math.min(Math.max((windowHeight - rect.top) / (rect.height + windowHeight), 0), 1);
 
-      // altura proporcional
-      bloodLine.style.height = `${progress * rect.height}px`;
-      bloodLine.style.width = `${6 + progress * 6}px`; // engrossa um pouco descendo
+      let newHeight = progress * rect.height * 0.8; // altura proporcional
+      if (newHeight > maxHeight) {
+        maxHeight = newHeight;
+        bloodLine.style.height = `${maxHeight}px`;
+        bloodLine.style.width = `${4 + maxHeight * 0.03}px`; // engrossa como cone
+        bloodLine.style.borderRadius = "999px";
 
-      // mostrar textos conforme o sangue chega perto deles
+        // aparece gota se já cresceu o suficiente
+        if (maxHeight > 100) {
+          bloodLine.style.setProperty("--show-drop", 1);
+          bloodLine.querySelector;
+          bloodLine.style.setProperty("content", "");
+          bloodLine.style.setProperty("opacity", 1);
+          bloodLine.style.setProperty("transition", "opacity 0.5s");
+        }
+      }
+
+      // mostrar textos em fade-in conforme a linha chega perto deles
       texts.forEach((text, i) => {
         let trigger = (i + 1) * 0.25;
         if (progress > trigger) {
