--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -195,61 +195,26 @@
 
 
 
-
 <!-- SEÇÃO 3 -->
-<section class="relative px-6 py-20 bg-black text-center overflow-hidden">
-  <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
+<section class="px-6 py-20 bg-black text-center">
+  <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
     O que você vai aprender dentro do Código da Persuasão?
   </h2>
-
-  <!-- Linha de sangue -->
-  <div id="blood-line" class="absolute top-[100px] left-1/2 transform -translate-x-1/2 w-2 bg-red-600 rounded-t-full z-10"></div>
-
-  <!-- Textos -->
-  <div class="relative z-20 max-w-3xl mx-auto space-y-16 text-gray-300">
-    <div>
-      <h3 class="font-bold mb-2 text-white text-xl lg:text-2xl drop-shadow-[2px_2px_6px_black]">📖 15 Gatilhos Mentais</h3>
-      <p class="drop-shadow-[2px_2px_6px_black]">Descubra cada gatilho, como funciona e como aplicá-lo no dia a dia.</p>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto text-gray-300">
+    <div class="p-6 border border-gray-600 rounded-lg bg-white/5">
+      <h3 class="font-bold mb-2 text-white">📖 15 Gatilhos Mentais</h3>
+      <p>Descubra cada gatilho, como funciona e como aplicá-lo no dia a dia.</p>
     </div>
-    <div>
-      <h3 class="font-bold mb-2 text-white text-xl lg:text-2xl drop-shadow-[2px_2px_6px_black]">🧠 Técnicas de PNL</h3>
-      <p class="drop-shadow-[2px_2px_6px_black]">Como programar sua mente e a dos outros para aceitar novas ideias.</p>
+    <div class="p-6 border border-gray-600 rounded-lg bg-white/5">
+      <h3 class="font-bold mb-2 text-white">🧠 Técnicas de PNL</h3>
+      <p>Como programar sua mente e a dos outros para aceitar novas ideias.</p>
     </div>
-    <div>
-      <h3 class="font-bold mb-2 text-white text-xl lg:text-2xl drop-shadow-[2px_2px_6px_black]">🎯 Aplicações Práticas</h3>
-      <p class="drop-shadow-[2px_2px_6px_black]">Exemplos reais de como usar persuasão em vendas, negociações e relacionamentos.</p>
+    <div class="p-6 border border-gray-600 rounded-lg bg-white/5">
+      <h3 class="font-bold mb-2 text-white">🎯 Aplicações Práticas</h3>
+      <p>Exemplos reais de como usar persuasão em vendas, negociações e relacionamentos.</p>
     </div>
   </div>
 </section>
-
-<!-- SCRIPT -->
-<script>
-  const bloodLine = document.getElementById("blood-line");
-  let maxScroll = 0;
-
-  window.addEventListener("scroll", () => {
-    const scrollTop = window.scrollY;
-
-    // só cresce se o scroll atual for maior que o já percorrido
-    if (scrollTop > maxScroll) {
-      maxScroll = scrollTop;
-
-      // altura da gota proporcional ao scroll
-      const newHeight = Math.min(maxScroll * 0.4, 600); // limite de 600px
-      bloodLine.style.height = `${newHeight}px`;
-
-      // engrossa a ponta conforme desce
-      const newWidth = Math.min(2 + newHeight / 80, 30);
-      bloodLine.style.width = `${newWidth}px`;
-
-      // ponta arredondada estilo gota
-      bloodLine.style.borderBottomLeftRadius = "50%";
-      bloodLine.style.borderBottomRightRadius = "50%";
-    }
-  });
-</script>
-
-
 
 
 
