--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -194,27 +194,63 @@
 
 
 
-
 <!-- SEÇÃO 3 -->
-<section class="px-6 py-20 bg-black text-center">
-  <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+<section class="relative px-6 py-32 bg-black text-center overflow-hidden">
+  <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
     O que você vai aprender dentro do Código da Persuasão?
   </h2>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto text-gray-300">
-    <div class="p-6 border border-gray-600 rounded-lg bg-white/5">
-      <h3 class="font-bold mb-2 text-white">📖 15 Gatilhos Mentais</h3>
-      <p>Descubra cada gatilho, como funciona e como aplicá-lo no dia a dia.</p>
-    </div>
-    <div class="p-6 border border-gray-600 rounded-lg bg-white/5">
-      <h3 class="font-bold mb-2 text-white">🧠 Técnicas de PNL</h3>
-      <p>Como programar sua mente e a dos outros para aceitar novas ideias.</p>
-    </div>
-    <div class="p-6 border border-gray-600 rounded-lg bg-white/5">
-      <h3 class="font-bold mb-2 text-white">🎯 Aplicações Práticas</h3>
-      <p>Exemplos reais de como usar persuasão em vendas, negociações e relacionamentos.</p>
-    </div>
+
+  <!-- Linha de sangue -->
+  <div id="blood-line" class="absolute top-32 left-1/2 -translate-x-1/2 w-[6px] bg-red-700 rounded-full z-10"></div>
+
+  <!-- Textos que aparecem -->
+  <div class="relative flex flex-col items-center gap-24 z-20">
+    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-2xl fade-text">
+      📖 Descubra os 15 gatilhos mentais, como funcionam e como aplicá-los no dia a dia.
+    </p>
+    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-2xl fade-text">
+      🧠 Domine as técnicas de PNL para programar sua mente e influenciar os outros.
+    </p>
+    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-2xl fade-text">
+      🎯 Veja aplicações práticas em vendas, negociações e relacionamentos reais.
+    </p>
   </div>
 </section>
+
+<style>
+  /* Sangue descendo */
+  #blood-line {
+    height: 0;
+    transition: height 0.4s linear;
+    background: linear-gradient(to bottom, #b71c1c, #ff0000, #700000);
+    box-shadow: 0 0 20px rgba(255,0,0,0.6);
+  }
+</style>
+
+<script>
+  const bloodLine = document.getElementById("blood-line");
+  const texts = document.querySelectorAll(".fade-text");
+
+  window.addEventListener("scroll", () => {
+    const section = bloodLine.parentElement;
+    const rect = section.getBoundingClientRect();
+    const windowHeight = window.innerHeight;
+
+    if (rect.top < windowHeight * 0.7) {
+      // altura proporcional ao scroll
+      let progress = Math.min((windowHeight - rect.top) / windowHeight, 1);
+      bloodLine.style.height = `${progress * rect.height}px`;
+
+      // mostrar textos conforme a linha desce
+      texts.forEach((text, i) => {
+        let trigger = (i + 1) * 0.25; // cada 25% do scroll
+        if (progress > trigger) {
+          text.classList.add("opacity-100");
+        }
+      });
+    }
+  });
+</script>
 
 
 
