--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -194,6 +194,7 @@
 
 
 
+
 <!-- SEÇÃO 3 -->
 <section class="relative px-6 py-32 bg-black text-center overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
@@ -201,28 +202,43 @@
   </h2>
 
   <!-- Linha de sangue -->
-  <div id="blood-line" class="absolute top-32 left-1/2 -translate-x-1/2 w-[6px] bg-red-700 rounded-full z-10"></div>
+  <div id="blood-line" class="absolute top-32 left-1/2 -translate-x-1/2 w-[6px] rounded-full z-10"></div>
 
-  <!-- Textos que aparecem -->
+  <!-- Textos -->
   <div class="relative flex flex-col items-center gap-24 z-20">
-    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-2xl fade-text">
+    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-xl fade-text drop-shadow-[0_0_10px_black]">
       📖 Descubra os 15 gatilhos mentais, como funcionam e como aplicá-los no dia a dia.
     </p>
-    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-2xl fade-text">
+    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-xl fade-text drop-shadow-[0_0_10px_black]">
       🧠 Domine as técnicas de PNL para programar sua mente e influenciar os outros.
     </p>
-    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-2xl fade-text">
+    <p class="opacity-0 transition-opacity duration-1000 text-white text-xl max-w-xl fade-text drop-shadow-[0_0_10px_black]">
       🎯 Veja aplicações práticas em vendas, negociações e relacionamentos reais.
     </p>
   </div>
 </section>
 
 <style>
-  /* Sangue descendo */
+  /* Linha de sangue */
   #blood-line {
     height: 0;
-    transition: height 0.4s linear;
-    background: linear-gradient(to bottom, #b71c1c, #ff0000, #700000);
+    background: linear-gradient(to bottom, #b71c1c 0%, #ff0000 40%, #700000 100%);
+    box-shadow: 0 0 25px rgba(255,0,0,0.6);
+    position: absolute;
+    border-radius: 999px;
+  }
+
+  /* Efeito gota mais grossa no fim */
+  #blood-line::after {
+    content: '';
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(circle, #ff0000 0%, #8b0000 80%);
+    border-radius: 50%;
     box-shadow: 0 0 20px rgba(255,0,0,0.6);
   }
 </style>
@@ -236,14 +252,17 @@
     const rect = section.getBoundingClientRect();
     const windowHeight = window.innerHeight;
 
-    if (rect.top < windowHeight * 0.7) {
-      // altura proporcional ao scroll
-      let progress = Math.min((windowHeight - rect.top) / windowHeight, 1);
-      bloodLine.style.height = `${progress * rect.height}px`;
+    if (rect.top < windowHeight && rect.bottom > 0) {
+      // progresso do scroll dentro da seção
+      let progress = Math.min(Math.max((windowHeight - rect.top) / (rect.height + windowHeight), 0), 1);
 
-      // mostrar textos conforme a linha desce
+      // altura proporcional
+      bloodLine.style.height = `${progress * rect.height}px`;
+      bloodLine.style.width = `${6 + progress * 6}px`; // engrossa um pouco descendo
+
+      // mostrar textos conforme o sangue chega perto deles
       texts.forEach((text, i) => {
-        let trigger = (i + 1) * 0.25; // cada 25% do scroll
+        let trigger = (i + 1) * 0.25;
         if (progress > trigger) {
           text.classList.add("opacity-100");
         }
@@ -251,6 +270,7 @@
     }
   });
 </script>
+
 
 
 
