--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -193,7 +193,6 @@
 </script>
 
 
-
 <!-- SEÇÃO 3 -->
 <section class="relative px-6 py-32 bg-black text-center overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
@@ -201,7 +200,7 @@
   </h2>
 
   <!-- Linha de sangue -->
-  <div id="blood-line" class="absolute top-64 left-1/2 -translate-x-1/2 w-[6px] rounded-full z-10"></div>
+  <div id="blood-line" class="absolute top-48 left-1/2 -translate-x-1/2 w-[6px] rounded-full z-10"></div>
 
   <!-- Textos -->
   <div class="relative flex flex-col items-center gap-20 z-20">
@@ -227,15 +226,15 @@
     border-radius: 999px;
   }
 
-  /* Efeito gota mais grossa no fim */
+  /* Efeito gota */
   #blood-line::after {
     content: '';
     position: absolute;
     bottom: -15px;
     left: 50%;
     transform: translateX(-50%);
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
     background: radial-gradient(circle, #ff0000 0%, #8b0000 80%);
     border-radius: 50%;
     box-shadow: 0 0 20px rgba(255,0,0,0.6);
@@ -252,16 +251,13 @@
     const windowHeight = window.innerHeight;
 
     if (rect.top < windowHeight && rect.bottom > 0) {
-      // progresso do scroll dentro da seção
       let progress = Math.min(Math.max((windowHeight - rect.top) / (rect.height + windowHeight), 0), 1);
 
-      // altura proporcional
       bloodLine.style.height = `${progress * rect.height}px`;
-      bloodLine.style.width = `${6 + progress * 6}px`; // engrossa descendo
+      bloodLine.style.width = `${6 + progress * 6}px`;
 
-      // mostrar textos conforme o sangue chega perto deles
       texts.forEach((text, i) => {
-        let trigger = (i + 1) * 0.25;
+        let trigger = (i + 1) * 0.2 + 0.15; // aparece mais cedo (0.35, 0.55, 0.75)
         if (progress > trigger) {
           text.classList.add("opacity-100");
         }
@@ -269,6 +265,7 @@
     }
   });
 </script>
+
 
 
 
