--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -193,6 +193,11 @@
 </script>
 
 
+
+
+
+
+
 <!-- SEÇÃO 3 -->
 <section class="relative px-6 py-32 bg-black text-center overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
@@ -200,7 +205,7 @@
   </h2>
 
   <!-- Linha de sangue -->
-  <div id="blood-line" class="absolute top-48 left-1/2 -translate-x-1/2 w-[6px] rounded-full z-10"></div>
+  <div id="blood-line" class="absolute top-56 left-1/2 -translate-x-1/2 w-[6px] rounded-full z-10"></div>
 
   <!-- Textos -->
   <div class="relative flex flex-col items-center gap-20 z-20">
@@ -217,7 +222,6 @@
 </section>
 
 <style>
-  /* Linha de sangue */
   #blood-line {
     height: 0;
     background: linear-gradient(to bottom, #b71c1c 0%, #ff0000 40%, #700000 100%);
@@ -225,8 +229,6 @@
     position: absolute;
     border-radius: 999px;
   }
-
-  /* Efeito gota */
   #blood-line::after {
     content: '';
     position: absolute;
@@ -257,7 +259,7 @@
       bloodLine.style.width = `${6 + progress * 6}px`;
 
       texts.forEach((text, i) => {
-        let trigger = (i + 1) * 0.2 + 0.15; // aparece mais cedo (0.35, 0.55, 0.75)
+        let trigger = (i + 1) * 0.2 + 0.15;
         if (progress > trigger) {
           text.classList.add("opacity-100");
         }
@@ -265,6 +267,7 @@
     }
   });
 </script>
+
 
 
 
