--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -246,6 +246,8 @@
   const bloodLine = document.getElementById("blood-line");
   const texts = document.querySelectorAll(".fade-text");
 
+  let maxProgress = 0; // guarda até onde já chegou
+
   window.addEventListener("scroll", () => {
     const section = bloodLine.parentElement;
     const rect = section.getBoundingClientRect();
@@ -254,21 +256,25 @@
     if (rect.top < windowHeight && rect.bottom > 0) {
       let progress = Math.min(Math.max((windowHeight - rect.top) / (rect.height + windowHeight), 0), 1);
 
-      bloodLine.style.height = `${progress * rect.height}px`;
-      bloodLine.style.width = `${6 + progress * 6}px`;
+      // nunca diminuir, só aumentar
+      if (progress > maxProgress) {
+        maxProgress = progress;
+      }
 
-      // Textos aparecem mais rápido
+      // altura proporcional ao progresso máximo
+      bloodLine.style.height = `${maxProgress * rect.height}px`;
+      bloodLine.style.width = `${6 + maxProgress * 6}px`;
+
+      // Textos aparecem mais rápido conforme a linha cresce
       texts.forEach((text, i) => {
         let trigger = (i + 1) * 0.15 + 0.05;
-        if (progress > trigger) {
+        if (maxProgress > trigger) {
           text.classList.add("opacity-100");
         }
       });
     }
   });
 </script>
-
-
 
 
 
