--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -210,13 +210,18 @@
   <!-- Textos -->
   <div class="relative flex flex-col items-center gap-20 z-20">
     <p class="opacity-0 transition-opacity duration-1000 text-white text-base max-w-md fade-text drop-shadow-[0_0_10px_black]">
-      📖 Descubra os 15 gatilhos mentais, como funcionam e como aplicá-los no dia a dia.
+      📖 Descubra os 15 gatilhos mentais, <br>
+      como funcionam e como aplicá-los <br>
+      no dia a dia.
     </p>
     <p class="opacity-0 transition-opacity duration-1000 text-white text-base max-w-md fade-text drop-shadow-[0_0_10px_black]">
-      🧠 Domine as técnicas de PNL para programar sua mente e influenciar os outros.
+      🧠 Domine as técnicas de PNL para <br>
+      programar sua mente e influenciar <br>
+      os outros.
     </p>
     <p class="opacity-0 transition-opacity duration-1000 text-white text-base max-w-md fade-text drop-shadow-[0_0_10px_black]">
-      🎯 Veja aplicações práticas em vendas, negociações e relacionamentos reais.
+      🎯 Veja aplicações práticas em vendas, <br>
+      negociações e relacionamentos reais.
     </p>
   </div>
 </section>
@@ -287,17 +292,67 @@
 
 
 
-<!-- CARD DE PREÇO -->
-<div id="preco" class="bg-white/10 border border-gray-500 rounded-xl p-6 max-w-md mx-auto text-black mt-12">
-  <h3 class="text-xl font-bold text-white mb-2">CÓDIGO DA PERSUASÃO</h3>
-  <p class="text-gray-300">De <s>R$ 97,00</s> por apenas:</p>
-  <p class="text-3xl font-bold text-green-400 mt-2">R$ 27,90 à vista</p>
-  <p class="text-gray-300 text-sm mb-4">ou 6x de R$ 5,23</p>
-  <a href="https://sun.eduzz.com/E0D6P4V691" 
-     class="bg-green-500 text-white font-bold py-4 px-6 w-full block rounded-lg transition-all btn-pulsante">
-     QUERO DESBLOQUEAR O CÓDIGO
+<!-- CARD DE PREÇO MELHORADO -->
+<div id="preco" class="bg-white/8 border border-gray-700 rounded-2xl p-6 max-w-md mx-auto text-black mt-12 backdrop-blur-sm shadow-lg">
+  <!-- Título -->
+  <h3 class="text-xl font-extrabold text-white mb-3 text-center">CÓDIGO DA PERSUASÃO</h3>
+
+  <!-- Imagem abaixo do título -->
+  <div class="flex justify-center mb-4">
+    <img src="https://i.imgur.com/AQVxso7.png" alt="Capa Código da Persuasão" class="w-28 h-auto object-contain">
+  </div>
+
+  <!-- Lista de benefícios / conteúdos -->
+  <ul class="mx-auto max-w-[360px] text-left mb-6 space-y-3 text-white/90">
+    <li class="flex items-start gap-3">
+      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+      <span><strong class="text-white">Código Completo de Persuasão</strong></span>
+    </li>
+    <li class="flex items-start gap-3">
+      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+      <span>Versão em <strong>Audio book</strong> completa</span>
+    </li>
+    <li class="flex items-start gap-3">
+      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+      <span><strong>Livros Proibidos</strong> para gerar riqueza</span>
+    </li>
+    <li class="flex items-start gap-3">
+      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+      <span>Conteúdo fechado de grandes Players</span>
+    </li>
+    <li class="flex items-start gap-3">
+      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+      <span>Garantia de <strong>30 dias</strong></span>
+    </li>
+    <li class="flex items-start gap-3">
+      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+      <span><strong>Manual de manipulação</strong> de pessoas</span>
+    </li>
+  </ul>
+
+  <!-- Preço / Opções -->
+  <div class="text-center mb-5">
+    <p class="text-gray-300 mb-1">De <s>R$ 97,00</s> por</p>
+
+    <!-- destaque parcelas -->
+    <div class="inline-flex items-baseline gap-3 bg-black/60 px-4 py-3 rounded-full">
+      <span class="text-sm text-gray-300">6x de</span>
+      <span class="text-3xl font-extrabold text-green-400">R$ 5,23</span>
+    </div>
+
+    <div class="mt-3 text-gray-300 text-sm">ou <strong class="text-white">R$ 27,90 à vista</strong></div>
+  </div>
+
+  <!-- CTA -->
+  <a href="https://sun.eduzz.com/E0D6P4V691"
+     class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center">
+    QUERO DESBLOQUEAR O CÓDIGO
   </a>
+
+  <!-- rodapé pequeno -->
+  <p class="text-xs text-gray-400 mt-4 text-center">Compra segura — Garantia incondicional de 30 dias</p>
 </div>
+
 
 
 
